Tue Feb 13 02:21:12 2007  Sam Roberts  <sroberts@uniserve.com>

	* io.c (rb_f_syscall): Fix buffer overflow with syscall
	  arguments.  [ruby-bugs:PR#8541]

Sat Feb 10 09:33:47 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): sorry, fix the enbug.

Sat Feb 10 09:08:01 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): fix compile error
	  on VC++.

Sat Feb 10 08:38:30 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): fix the bug when
	  SAFEARRAY pointer is NULL.

Tue Feb  6 20:41:39 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* string.c (rb_str_sub_bang): calling rb_str_modify() should be just
	  before actually modifying the string.
	  fixed: [ruby-dev:30211] (originally reported by zunda)

Sat Jan 27 15:20:11 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (dyna_var_lookup): should not alter dvar->val not to
	  destroy living value.  [ruby-core:10076]

	* parse.y (dyna_init): ditto.

Wed Jan 24 18:05:39 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el (ruby-font-lock-syntactic-keywords): fix
	  regexp font-lock bug.  [ruby-talk:235758]

Sun Jan 14 07:26:44 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_free, ole_type_free, 
	  olemethod_free, olevariable_free, oleparam_free, 
	  ole_event_free): fix memory leak.  [ruby-core:09846]

Tue Jan  9 12:29:20 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_getpwuid, etc_getgrgid): fix to correctly
	  convert uid/gid from VALUE.

	* ext/etc/etc.c (etc_getpwuid): ditto.

Mon Dec 25 20:08:28 2006  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/openssl/ossl.h: fixed compilation problem on gcc 3.2.
	  [ruby-talk:214786]

Mon Dec 25 10:40:40 2006  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* stable version 1.8.5-p12 released.

Sat Dec 16 04:02:10 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
