@@ -341,14 +341,6 @@ ruby_signal(signum, handler)
     sigact.sa_handler = handler;
     sigemptyset(&sigact.sa_mask);
     sigact.sa_flags = 0;
-# if defined(SA_RESTART)
-    /* All other signals but VTALRM shall restart restartable syscall
-       VTALRM will cause EINTR to syscall if interrupted.
-    */
-    if (signum != SIGVTALRM) {
-        sigact.sa_flags |= SA_RESTART; /* SVR4, 4.3+BSD */
-    }
-# endif
 # ifdef SA_NOCLDWAIT
     if (signum == SIGCHLD && handler == SIG_IGN)
 	sigact.sa_flags |= SA_NOCLDWAIT;
