@@ -1,3 +1,8 @@
+Mon Feb 26 09:57:58 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* signal.c (ruby_signal): don't set SA_RESTART.  a backport from
+	  the HEAD.  [ruby-talk:220937]  [ruby-talk:147220]
+
 Tue Feb 13 02:21:12 2007  Sam Roberts  <sroberts@uniserve.com>
 
 	* io.c (rb_f_syscall): Fix buffer overflow with syscall
